--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Abdul Habeeb | Portfolio</title>
 
     <!-- Meta Tags -->
-    <meta name="description" content="Show yourself brightly with Braxton - unique and creative portfolio and resume template!">
-    <meta name="keywords" content="mix_design, resume, portfolio, personal page, cv, template, one page, responsive, html5, css3, creative, clean">
-    <meta name="author" content="mix_design">
+    <meta name="description" content="Hi, My name is Abdul Habeeb and I love to build websites ">
+    <meta name="keywords" content="Abdul Habeeb, portfolio, Website, web developer">
+    <meta name="author" content="Abdul_Habeeb">
 
     <!-- Viewport Meta-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
