--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <meta property="og:image:height" content="1200">
     <meta property="og:image:width" content="1200">
     <meta property="og:title" content="Abdul Habeeb | Portfolio">
-    <meta property="og:description" content="Show yourself brightly with Braxton - unique and creative portfolio and resume template!">
-    <meta property="og:url" content="https://mixdesign.club/themeforest/braxton">
-    <meta property="og:image" content="https://mixdesign.club/themeforest/braxton/img/favicon/og-image.jpg">
+    <meta property="og:description" content="Hi, My name is Abdul Habeeb and I love to build websites">
+    <meta property="og:url" content="https://abdulhabeeb.website/">
+    <meta property="og:image" content="https://i.ibb.co/d7H5bRn/myavatar.png">
     <!-- Facebook Metadata End -->
 
     <!-- Template Styles Start -->
