--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <span class="btn-caption">My Works</span>
                 <i class="ph-bold ph-squares-four"></i>
               </a>
-              <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline" href="https://drive.google.com/uc?export=download&id=1hIdlGthrvz9xghxJPmnykjpdPX0dz6vE">
+              <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline" href="https://drive.google.com/u/0/uc?id=1OfbjI3szKrhSj9xResBjNDtKbNx6tzP8&export=download">
                 <span class="btn-caption">Download CV</span>
                 <i class="ph-bold ph-download-simple"></i>
               </a>
@@ -360,7 +360,7 @@
                       <div class="col-12 col-md-5">
                         
                         <p class="resume-lines__source animate-in-up">
-                          <a href="https://modernluxury.homes" class="text-link-bold" target="_blank">Click here to view the project</a>
+                          <a href="https://modernluxury-design.com/" class="text-link-bold" target="_blank">Click here to view the project</a>
                           
                         </p>
                       </div>
@@ -475,7 +475,7 @@
 
                   </p>
                   <div class="btn-group about-descr__btnholder animate-in-up">
-                    <a class="btn mobile-vertical btn-default btn-hover btn-hover-accent" href="https://drive.google.com/uc?export=download&id=1hIdlGthrvz9xghxJPmnykjpdPX0dz6vE">
+                    <a class="btn mobile-vertical btn-default btn-hover btn-hover-accent" href="https://drive.google.com/u/0/uc?id=1OfbjI3szKrhSj9xResBjNDtKbNx6tzP8&export=download">
                       <span class="btn-caption">Download CV</span>
                       <i class="ph-bold ph-download-simple"></i>
                     </a>
