--- a/index.html
+++ b/index.html
@@ -925,6 +925,7 @@
               <!-- Contact Form End -->
               <form action="https://api.web3forms.com/submit" method="POST" class="form contact-form" >
                 <input type="hidden" name="access_key" value="c3906f31-abce-41a1-b156-e745f49cb494">
+                <input type="hidden" name="redirect" value="https://www.abdulhabeeb.website/thankyou.html">
                 
                 <div class="container-fluid p-0">
                     <div class="row gx-0">
