--- a/index.html
+++ b/index.html
@@ -651,6 +651,21 @@
                   <p class="small resume-lines__descr animate-in-up">Completed a comprehensive course on 'Web Development with HTML, CSS, JavaScript', refining skills in building interactive and visually appealing websites. Proficient in crafting responsive layouts and enhancing user experiences with dynamic functionality.</p>
                 </div>
               </div>
+              <div class="row g-0 resume-lines__item animate-in-up">
+                <div class="col-12 col-md-2">
+                  <span class="resume-lines__date animate-in-up">IBM</span>
+                </div>
+                <div class="col-12 col-md-5">
+                  <h5 class="resume-lines__title animate-in-up">Getting Started with Git and Github</h5>
+                  <p class="resume-lines__source animate-in-up">Online Course :
+                    <a href="https://coursera.org/share/eb0b17dac79f70a943527b08f4f5fae1" class="text-link-bold" target="_blank">Coursera</a>
+                    
+                  </p>
+                </div>
+                <div class="col-12 col-md-5">
+                  <p class="small resume-lines__descr animate-in-up">Completed a comprehensive course on 'Getting Started with Git and Github'. Understood version control and concepts like staging, branching, rollback features.</p>
+                </div>
+              </div>
               <!-- experience single item -->
               <!-- <div class="row g-0 resume-lines__item animate-in-up">
                 <div class="col-12 col-md-2">
