--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="og:title" content="Abdul Habeeb | Portfolio">
     <meta property="og:description" content="Hi, My name is Abdul Habeeb and I love to build websites">
     <meta property="og:url" content="https://abdulhabeeb.website/">
-    <meta property="og:image" content="https://i.ibb.co/d7H5bRn/myavatar.png">
+    <meta property="og:image" content="https://i.ibb.co/fDtgL4h/myavatar.webp">
     <!-- Facebook Metadata End -->
 
     <!-- Template Styles Start -->
