--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
                 <i class="ph-bold ph-envelope"></i>
               </a>
             </li>
+            <li class="menu__item">
+              <a class="menu__link btn" href="https://blog.abdulhabeeb.website/">
+                <span class="menu__caption">Blogs</span>
+                <i class="ph-bold ph-envelope"></i>
+              </a>
+            </li>
           </ul>
         </nav>
       </div>
