--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <li class="menu__item">
               <a class="menu__link btn" href="https://blog.abdulhabeeb.website/">
                 <span class="menu__caption">Blogs</span>
-                <i class="ph-bold ph-envelope"></i>
+                <i class="ph-bold ph-book-bookmark"></i>
               </a>
             </li>
           </ul>
