--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
     
                 <!-- Works Gallery Single Item Start -->
                 <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                  <a href="img/backgrounds/grandlense_feautured.png" data-image="img/backgrounds/grandlense_feautured.png" class="gallery__link" itemprop="contentUrl" data-size="1400x1400">
-                    <img src="img/backgrounds/grandlense_feautured.png" class="gallery__image" itemprop="thumbnail" alt="Image description">
+                  <a href="img/backgrounds/glfeat.png" data-image="img/backgrounds/glfeat.png" class="gallery__link" itemprop="contentUrl" data-size="1400x1400">
+                    <img src="img/backgrounds/glfeat.png" class="gallery__image" itemprop="thumbnail" alt="Image description">
                   </a>
                   <figcaption class="gallery__descr" itemprop="caption description">
                     <h5>GrandLense</h5>
@@ -350,7 +350,7 @@
 
                 <!-- Works Gallery Single Item End -->
                 <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                  <a href="/img/backgrounds/chickbites.png" data-image="/img/backgrounds/chickbites.png" class="gallery__link" itemprop="contentUrl" data-size="1400x1400">
+                  <a href="/img/backgrounds/cbfeatured.png" data-image="/img/backgrounds/cbfeatured.png" class="gallery__link" itemprop="contentUrl" data-size="1400x1400">
                     <img src="https://dummyimage.com/800x800/3c3c3c/636363" class="gallery__image" itemprop="thumbnail" alt="Image description">
                   </a>
                   <figcaption class="gallery__descr opposite" itemprop="caption description">
@@ -375,7 +375,7 @@
     
                 <!-- Works Gallery Single Item Start -->
                 <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                  <a href="/img/backgrounds/modernluxury_feautured.png" data-image="https://i.ibb.co/q9w51ZT/modernluxury-feautured.png" class="gallery__link" itemprop="contentUrl" data-size="1400x1400">
+                  <a href="/img/backgrounds/mlfeat.png" data-image="/img/backgrounds/mlfeat.png" class="gallery__link" itemprop="contentUrl" data-size="1400x1400">
                     <img src="https://dummyimage.com/800x800/3c3c3c/636363" class="gallery__image" itemprop="thumbnail" alt="Image description">
                   </a>
                   <figcaption class="gallery__descr opposite" itemprop="caption description">
