--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <!-- Web Dev Portfolio -->
     <!-- Page Title -->
     <title>Abdul Habeeb | Portfolio</title>
+    <script src="https://php.abdulhabeeb.website/js/min/jquery.min.js"></script>
+    <script id="sbinit" src="https://php.abdulhabeeb.website/js/main.js"></script>
 
     <!-- Meta Tags -->
     <meta name="description" content="Hi, My name is Abdul Habeeb and I love to build websites ">
