--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <!-- Web Dev Portfolio -->
     <!-- Page Title -->
     <title>Abdul Habeeb | Portfolio</title>
+
+    <!-- support board -->
+
+    <script id="chat-init" src="https://cloud.board.support/account/js/init.js?id=939432672"></script>
     <script src="https://php.abdulhabeeb.website/js/min/jquery.min.js"></script>
     <script id="sbinit" src="https://php.abdulhabeeb.website/js/main.js"></script>
 
