--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- support board -->
 
     <script id="chat-init" src="https://cloud.board.support/account/js/init.js?id=939432672"></script>
-    <script src="https://php.abdulhabeeb.website/js/min/jquery.min.js"></script>
-    <script id="sbinit" src="https://php.abdulhabeeb.website/js/main.js"></script>
+    <!-- <script src="https://php.abdulhabeeb.website/js/min/jquery.min.js"></script>
+    <script id="sbinit" src="https://php.abdulhabeeb.website/js/main.js"></script> -->
 
     <!-- Meta Tags -->
     <meta name="description" content="Hi, My name is Abdul Habeeb and I love to build websites ">
