--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Abdul Habeeb | Portfolio</title>
 
     <!-- support board -->
-    <!-- <script src="https://php.abdulhabeeb.website/js/min/jquery.min.js"></script>
-    <script id="sbinit" src="https://php.abdulhabeeb.website/js/main.js"></script> -->
+    <script src="https://php.abdulhabeeb.website/js/min/jquery.min.js"></script>
+    <script id="sbinit" src="https://php.abdulhabeeb.website/js/main.js"></script>
 
-    <script id="chat-init" src="https://cloud.board.support/account/js/init.js?id=939432672"></script>
+    <!-- <script id="chat-init" src="https://cloud.board.support/account/js/init.js?id=939432672"></script> -->
     
 
     <!-- Meta Tags -->
