--- a/index.html
+++ b/index.html
@@ -1274,7 +1274,7 @@
     
     <!-- Load Scripts End -->
      <!-- Live Chat 3 widget -->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 	(function(w, d, s, u) {
 		w.id = 1; w.lang = ''; w.cName = ''; w.cEmail = ''; w.cMessage = ''; w.lcjUrl = u;
 		var h = d.getElementsByTagName(s)[0], j = d.createElement(s);
@@ -1282,7 +1282,7 @@
 		h.parentNode.insertBefore(j, h);
 	})(window, document, 'script', 'https://testing.abdulhabeeb.website//');
 </script>
-<div id="jaklcp-chat-container"></div>
+<div id="jaklcp-chat-container"></div> -->
 <!-- end Live Chat 3 widget -->
     
   </body>
