--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="avatar__block">
           <h6>
             <small class="top">Based in:</small>
-            Mangaluru, India
+            Saarland, Germany
           </h6>
         </div>
         <!-- socials and CTA button -->
@@ -586,7 +586,7 @@
                   <div class="about-info__item animate-in-up" >
                     <h6>
                       <small class="top">Location</small>
-                      <a class="text-link-bold" href="https://maps.app.goo.gl/UiHZhtDDickb8Qot7" target="_blank">Mangaluru, India</a>
+                      <a class="text-link-bold" href="https://maps.app.goo.gl/UiHZhtDDickb8Qot7" target="_blank">Saarland, Germany</a>
                     </h6>
                   </div>
                 </div>
@@ -1119,7 +1119,7 @@
                 <div class="col-12 col-md-4 contact-lines__data">
                   <p class="contact-lines__title animate-in-up">Location</p>
                   <p class="contact-lines__text animate-in-up">
-                    <a class="text-link-bold" href="https://maps.app.goo.gl/UiHZhtDDickb8Qot7" target="_blank">Mangaluru, India</a>
+                    <a class="text-link-bold" href="https://maps.app.goo.gl/UiHZhtDDickb8Qot7" target="_blank">Saarland, Germany</a>
                   </p>
                 </div>
                 <!-- data item -->
