--- a/index.html
+++ b/index.html
@@ -651,6 +651,22 @@
               <!-- education single item -->
               <div class="row g-0 resume-lines__item animate-in-up">
                 <div class="col-12 col-md-2">
+                  <span class="resume-lines__date animate-in-up">2024 - </span>
+                </div>
+                <div class="col-12 col-md-5">
+                  <h5 class="resume-lines__title animate-in-up">Masters in Data Science and AI</h5>
+                  <p class="resume-lines__source animate-in-up">University : 
+                    <a href="https://www.uni-saarland.de/en/home.html" class="text-link-bold" target="_blank">University of Saarland, Germany</a>
+                  </p>
+                </div>
+                <div class="col-12 col-md-5">
+                  <p class="small resume-lines__descr animate-in-up">Ongoing</p>
+                </div>
+              </div>
+              <!-- education single item -->
+              <!-- education single item -->
+              <div class="row g-0 resume-lines__item animate-in-up">
+                <div class="col-12 col-md-2">
                   <span class="resume-lines__date animate-in-up">2019 - 2023</span>
                 </div>
                 <div class="col-12 col-md-5">
