--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 <span class="btn-caption">My Works</span>
                 <i class="ph-bold ph-squares-four"></i>
               </a>
-              <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline" href="https://drive.google.com/u/0/uc?id=1OfbjI3szKrhSj9xResBjNDtKbNx6tzP8&export=download">
+              <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline" href="https://drive.google.com/uc?export=download&id=10h6_LR0gVoj5TVRD1n83ZeCd91ExLtGW">
                 <span class="btn-caption">Download CV</span>
                 <i class="ph-bold ph-download-simple"></i>
               </a>
@@ -604,7 +604,7 @@
 
                   </p>
                   <div class="btn-group about-descr__btnholder animate-in-up">
-                    <a class="btn mobile-vertical btn-default btn-hover btn-hover-accent" href="https://drive.google.com/u/0/uc?id=1OfbjI3szKrhSj9xResBjNDtKbNx6tzP8&export=download">
+                    <a class="btn mobile-vertical btn-default btn-hover btn-hover-accent" href="https://drive.google.com/uc?export=download&id=10h6_LR0gVoj5TVRD1n83ZeCd91ExLtGW">
                       <span class="btn-caption">Download CV</span>
                       <i class="ph-bold ph-download-simple"></i>
                     </a>
