--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <div class="header__controls d-flex justify-content-end">
         <button id="color-switcher" class="color-switcher header__switcher btn" type="button" role="switch" aria-label="light/dark mode" aria-checked=""></button>
 
-        <a id="notify-trigger" class="header__trigger btn" href="https://api.whatsapp.com/send?phone=49155150153081&text=Hey%20Habeeb%2C%0AI%20saw%20your%20portfolio">
+        <a id="notify-trigger" class="header__trigger btn" href="https://api.whatsapp.com/send?phone=4915510153081&text=Hello%20Habeeb%2C%20I%20saw%20your%20portfolio%20and%20I%20would%20like%20to%20offer%20">
           <span class="trigger__caption">Let's Talk</span>
           <i class="ph-bold ph-chat-dots"></i>
         </a>
@@ -263,7 +263,7 @@
                 <a class="socials-square__link btn" href="https://www.linkedin.com/in/abdul-habeeb-7a51971ab/" target="_blank"><i class="ph-bold ph-linkedin-logo"></i></a>
               </li>
               <li class="socials-square__item">
-                <a class="socials-square__link btn" href="https://api.whatsapp.com/send?phone=49155150153081&text=Hey%20Habeeb%2C%0AI%20saw%20your%20portfolio" target="_blank"><i class="ph-bold ph-whatsapp-logo"></i></a>
+                <a class="socials-square__link btn" href="https://api.whatsapp.com/send?phone=4915510153081&text=Hello%20Habeeb%2C%20I%20saw%20your%20portfolio%20and%20I%20would%20like%20to%20offer%20" target="_blank"><i class="ph-bold ph-whatsapp-logo"></i></a>
               </li>
               <li class="socials-square__item">
                 <a class="socials-square__link btn" href="https://www.instagram.com/abid_abib" target="_blank"><i class="ph-bold ph-instagram-logo"></i></a>
@@ -277,7 +277,7 @@
             </ul>
           </div>
           <div class="avatar__btnholder">
-            <a class="btn btn-default btn-fullwidth btn-hover btn-hover-accent" href="https://api.whatsapp.com/send?phone=49155150153081&text=Hey%20Habeeb%2C%0AI%20saw%20your%20portfolio" target="_blank">
+            <a class="btn btn-default btn-fullwidth btn-hover btn-hover-accent" href="https://api.whatsapp.com/send?phone=4915510153081&text=Hello%20Habeeb%2C%20I%20saw%20your%20portfolio%20and%20I%20would%20like%20to%20offer%20" target="_blank">
               <span class="btn-caption">Let's Talk!</span>
             </a>
           </div>
@@ -624,7 +624,7 @@
                   <div class="about-info__item animate-in-up">
                     <h6>
                       <small class="top">Phone</small>
-                      <a class="text-link-bold" href="https://api.whatsapp.com/send?phone=49155150153081&text=Hey%20Habeeb%2C%0AI%20saw%20your%20portfolio">+49155150153081</a>
+                      <a class="text-link-bold" href="https://api.whatsapp.com/send?phone=4915510153081&text=Hello%20Habeeb%2C%20I%20saw%20your%20portfolio%20and%20I%20would%20like%20to%20offer%20">+49155150153081</a>
                     </h6>
                   </div>
                   <div class="about-info__item animate-in-up">
@@ -1136,7 +1136,7 @@
               <div class="socials-cards__item d-flex grid-item-s animate-card-5">
                 <div class="socials-cards__card">
                   <i class="ph-bold ph-whatsapp-logo"></i>
-                  <a class="socials-cards__link" href="https://api.whatsapp.com/send?phone=49155150153081&text=Hey%20Habeeb%2C%0AI%20saw%20your%20portfolio" target="_blank"></a>
+                  <a class="socials-cards__link" href="https://api.whatsapp.com/send?phone=4915510153081&text=Hello%20Habeeb%2C%20I%20saw%20your%20portfolio%20and%20I%20would%20like%20to%20offer%20" target="_blank"></a>
                 </div>
               </div>
               <!-- socials item -->
@@ -1192,7 +1192,7 @@
                 <div class="col-12 col-md-4 contact-lines__data">
                   <p class="contact-lines__title animate-in-up">Phone</p>
                   <p class="contact-lines__text animate-in-up">
-                    <a class="text-link-bold" href="https://api.whatsapp.com/send?phone=49155150153081&text=Hey%20Habeeb%2C%0AI%20saw%20your%20portfolio">+49155150153081</a>
+                    <a class="text-link-bold" href="https://api.whatsapp.com/send?phone=4915510153081&text=Hello%20Habeeb%2C%20I%20saw%20your%20portfolio%20and%20I%20would%20like%20to%20offer%20">+49155150153081</a>
                   </p>
                 </div>
                 <!-- data item -->
