--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <!-- Meta Tags -->
     <meta name="description" content="Hi, My name is Abdul Habeeb and I love to build websites ">
-    <meta name="keywords" content="Abdul Habeeb, portfolio, Website, web developer">
-    <meta name="author" content="Abdul_Habeeb">
+    <meta name="keywords" content="Abdul Habeeb, portfolio, Website, abdulhabeeb, abdul, abdul habeeb,web developer">
+    <meta name="author" content="AbdulHabeeb">
 
     <!-- Viewport Meta-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
