--- a/webdevportfolio/index.html
+++ b/webdevportfolio/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!-- Web Dev Portfolio -->
     <!-- Page Title -->
-    <title>Abdul Habeeb | portfolio</title>
+    <title>Abdul Habeeb | Portfolio</title>
 
     <!-- support board -->
     <!-- <script src="https://php.abdulhabeeb.website/js/min/jquery.min.js"></script>
