--- a/webdevportfolio/index.html
+++ b/webdevportfolio/index.html
@@ -309,7 +309,7 @@
                 <span class="btn-caption">My Works</span>
                 <i class="ph-bold ph-squares-four"></i>
               </a>
-              <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline" href="https://drive.google.com/uc?export=download&id=1AU1G_Mgig7SizVapgRsgZSILztxGFQLx">
+              <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline" href="https://drive.google.com/file/d/1J-N9XuXZyF5tddsBIi5R3sumQkns39-r/view">
                 <span class="btn-caption">Download CV</span>
                 <i class="ph-bold ph-download-simple"></i>
               </a>
@@ -628,7 +628,7 @@
 
                   </p>
                   <div class="btn-group about-descr__btnholder animate-in-up">
-                    <a class="btn mobile-vertical btn-default btn-hover btn-hover-accent" href="https://drive.google.com/uc?export=download&id=1AU1G_Mgig7SizVapgRsgZSILztxGFQLx">
+                    <a class="btn mobile-vertical btn-default btn-hover btn-hover-accent" href="https://drive.google.com/file/d/1J-N9XuXZyF5tddsBIi5R3sumQkns39-r/view">
                       <span class="btn-caption">Download CV</span>
                       <i class="ph-bold ph-download-simple"></i>
                     </a>
