--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 <span class="btn-caption">My Works</span>
                 <i class="ph-bold ph-squares-four"></i>
               </a>
-              <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline" href="https://drive.google.com/uc?export=download&id=1AU1G_Mgig7SizVapgRsgZSILztxGFQLx">
+              <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline" href="https://drive.google.com/file/d/1J-N9XuXZyF5tddsBIi5R3sumQkns39-r/view">
                 <span class="btn-caption">Download CV</span>
                 <i class="ph-bold ph-download-simple"></i>
               </a>
@@ -590,15 +590,15 @@
               <!-- achievements single item -->
               <div class="achievements__item d-flex flex-column grid-item animate-card-3">
                 <div class="achievements__card">
-                  <p class="achievements__number">23</p>
+                  <p class="achievements__number">24</p>
                   <p class="achievements__descr">Years Old</p>
                 </div>
               </div>
               <!-- achievements single item -->
               <div class="achievements__item d-flex flex-column grid-item animate-card-3">
                 <div class="achievements__card">
-                  <p class="achievements__number">4+</p>
-                  <p class="achievements__descr">Years of freelancing experience</p>
+                  <p class="achievements__number">2+</p>
+                  <p class="achievements__descr">Years of experience</p>
                 </div>
               </div>
               <!-- achievements single item -->
@@ -628,7 +628,7 @@
 
                   </p>
                   <div class="btn-group about-descr__btnholder animate-in-up">
-                    <a class="btn mobile-vertical btn-default btn-hover btn-hover-accent" href="https://drive.google.com/uc?export=download&id=1AU1G_Mgig7SizVapgRsgZSILztxGFQLx">
+                    <a class="btn mobile-vertical btn-default btn-hover btn-hover-accent" href="https://drive.google.com/file/d/1J-N9XuXZyF5tddsBIi5R3sumQkns39-r/view">
                       <span class="btn-caption">Download CV</span>
                       <i class="ph-bold ph-download-simple"></i>
                     </a>
@@ -699,9 +699,48 @@
           <!-- Content Block - Education Start -->
           <div class="content__block block-large">
 
+
             <!-- H3 Block Start -->
             <div class="section-h3" >
-              <h3 class="h3__title animate-in-up">My education</h3>
+              <h3 class="h3__title animate-in-up">Work Experience</h3>
+            </div>
+            <!-- H3 Block End -->
+
+            <div class="container-fluid p-0 resume-lines">
+              <!-- education single item -->
+              <!-- <div class="row g-0 resume-lines__item animate-in-up">
+                <div class="col-12 col-md-2">
+                  <span class="resume-lines__date animate-in-up">2024 - Present</span>
+                </div>
+                <div class="col-12 col-md-5">
+                  <h5 class="resume-lines__title animate-in-up">Masters in Data Science and AI</h5>
+                  <p class="resume-lines__source animate-in-up">University :
+                    <a href="https://www.uni-saarland.de/en/study/programmes/master/data-science.html" class="text-link-bold" target="_blank">Saarland University, Germany</a>
+                  </p>
+                </div>
+                <div class="col-12 col-md-5">
+                  <p class="small resume-lines__descr animate-in-up">Currently pursuing a Master of Science in Data Science and Artificial Intelligence at Saarland University, Saarbrücken, Germany.</p>
+                </div>
+              </div> -->
+              <!-- education single item -->
+              <div class="row g-0 resume-lines__item animate-in-up">
+                <div class="col-12 col-md-2">
+                  <span class="resume-lines__date animate-in-up">2023 - 2024 </span>
+                </div>
+                <div class="col-12 col-md-5">
+                  <h5 class="resume-lines__title animate-in-up">UI / UX and Front End Developer</h5>
+                  <p class="resume-lines__source animate-in-up">Company : 
+                    <a href="" class="text-link-bold" target="_blank">Zephyr Technologies, India</a>
+                  </p>
+                </div>
+                
+              </div>
+            </div>
+             
+
+            <!-- H3 Block Start -->
+            <div class="section-h3" >
+              <h3 class="h3__title animate-in-up">Education</h3>
             </div>
             <!-- H3 Block End -->
 
