Update all CV buttons to 'Resume' with correct link everywhere

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           <a class="btn btn-default btn-fullwidth btn-hover btn-hover-accent"
             href="https://api.whatsapp.com/send?phone=4915510153081&text=Hello%20Habeeb%2C%20I%20saw%20your%20portfolio%20and%20I%20would%20like%20to%20offer%20"
             target="_blank">
-            <span class="btn-caption">Let's Talk!</span>
+            <span class="btn-caption">Resume</span>
           </a>
         </div>
       </div>
@@ -338,8 +338,8 @@
               <i class="ph-bold ph-squares-four"></i>
             </a>
             <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline"
-              href="https://drive.google.com/file/d/1J-N9XuXZyF5tddsBIi5R3sumQkns39-r/view">
-              <span class="btn-caption">Download CV</span>
+              href="https://drive.google.com/file/d/17dQRJI_26QC7tY1wd4qWMxEks2TSMWcG/view?usp=sharing">
+              <span class="btn-caption">Resume</span>
               <i class="ph-bold ph-download-simple"></i>
             </a>
           </div>
@@ -700,8 +700,8 @@
                 </p>
                 <div class="btn-group about-descr__btnholder animate-in-up">
                   <a class="btn mobile-vertical btn-default btn-hover btn-hover-accent"
-                    href="https://drive.google.com/file/d/1J-N9XuXZyF5tddsBIi5R3sumQkns39-r/view">
-                    <span class="btn-caption">Download CV</span>
+                    href="https://drive.google.com/file/d/17dQRJI_26QC7tY1wd4qWMxEks2TSMWcG/view?usp=sharing">
+                    <span class="btn-caption">Resume</span>
                     <i class="ph-bold ph-download-simple"></i>
                   </a>
                 </div>
