Open Blogs navbar link in new tab (target=_blank)

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link btn" href="https://blog.abdulhabeeb.website/">
+            <a class="menu__link btn" href="https://blog.abdulhabeeb.website/" target="_blank">
               <span class="menu__caption">Blogs</span>
               <i class="ph-bold ph-book-bookmark"></i>
             </a>
@@ -338,7 +338,7 @@
               <i class="ph-bold ph-squares-four"></i>
             </a>
             <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline"
-              href="https://drive.google.com/file/d/17dQRJI_26QC7tY1wd4qWMxEks2TSMWcG/view?usp=sharing">
+              href="https://drive.google.com/file/d/17dQRJI_26QC7tY1wd4qWMxEks2TSMWcG/view?usp=sharing" target="_blank">
               <span class="btn-caption">Resume</span>
               <i class="ph-bold ph-download-simple"></i>
             </a>
@@ -700,7 +700,8 @@
                 </p>
                 <div class="btn-group about-descr__btnholder animate-in-up">
                   <a class="btn mobile-vertical btn-default btn-hover btn-hover-accent"
-                    href="https://drive.google.com/file/d/17dQRJI_26QC7tY1wd4qWMxEks2TSMWcG/view?usp=sharing">
+                    href="https://drive.google.com/file/d/17dQRJI_26QC7tY1wd4qWMxEks2TSMWcG/view?usp=sharing"
+                    target="_blank">
                     <span class="btn-caption">Resume</span>
                     <i class="ph-bold ph-download-simple"></i>
                   </a>
