--- a/index.html
+++ b/index.html
@@ -276,10 +276,7 @@
       <div class="avatar__block">
         <div class="avatar__socials">
           <ul class="socials-square d-flex justify-content-between">
-            <li class="socials-square__item">
-              <a class="socials-square__link btn" href="https://www.linkedin.com/in/abdul-habeeb-7a51971ab/"
-                target="_blank"><i class="ph-bold ph-linkedin-logo"></i></a>
-            </li>
+            <!-- Removed LinkedIn icon -->
             <li class="socials-square__item">
               <a class="socials-square__link btn"
                 href="https://api.whatsapp.com/send?phone=4915510153081&text=Hello%20Habeeb%2C%20I%20saw%20your%20portfolio%20and%20I%20would%20like%20to%20offer%20"
@@ -301,9 +298,10 @@
         </div>
         <div class="avatar__btnholder">
           <a class="btn btn-default btn-fullwidth btn-hover btn-hover-accent"
-            href="https://api.whatsapp.com/send?phone=4915510153081&text=Hello%20Habeeb%2C%20I%20saw%20your%20portfolio%20and%20I%20would%20like%20to%20offer%20"
+            href="https://www.linkedin.com/in/abdulhabeeb9731"
             target="_blank">
-            <span class="btn-caption">Resume</span>
+            <span class="btn-caption">LinkedIn</span>
+            <i class="ph-bold ph-linkedin-logo"></i>
           </a>
         </div>
       </div>
@@ -728,7 +726,8 @@
                 <div class="about-info__item animate-in-up">
                   <h6>
                     <small class="top">Email</small>
-                    <a class="text-link-bold" href="mailto:abdulhabeeb9731@gmail.com">abdulhabeeb9731@gmail.com</a>
+                    <a class="text-link-bold" href="mailto:abdulhabeeb9731@gmail.com">abdulhabeeb9731@gmail.com</a><br>
+                    <a class="text-link-bold" href="mailto:hello@abdulhabeeb.de">hello@abdulhabeeb.de</a>
                   </h6>
                 </div>
                 <div class="about-info__item animate-in-up">
@@ -1367,6 +1366,12 @@
                   <a class="socials-cards__link" href="mailto:abdulhabeeb9731@gmail.com" target="_blank"></a>
                 </div>
               </div>
+              <div class="socials-cards__item d-flex grid-item-s animate-card-5">
+                <div class="socials-cards__card">
+                  <i class="ph-bold ph-google-logo"></i>
+                  <a class="socials-cards__link" href="mailto:hello@abdulhabeeb.de" target="_blank"></a>
+                </div>
+              </div>
             </div>
           </div>
           <!-- Content Block - Socials Cards End -->
@@ -1376,7 +1381,8 @@
             <div class="teaser">
               <p class="teaser__text animate-in-up">Want to know more about me, tell me
                 about your project or just to say hello?
-                <a class="text-link-bold" href="mailto:abdulhabeeb9731@gmail.com">Drop me a line</a>
+                <a class="text-link-bold" href="mailto:abdulhabeeb9731@gmail.com">Drop me a line</a><br>
+                <a class="text-link-bold" href="mailto:hello@abdulhabeeb.de">Drop me a line</a>
                 and I'll get back
                 as soon as possible.
               </p>
@@ -1408,9 +1414,11 @@
                 <div class="col-12 col-md-4 contact-lines__data">
                   <p class="contact-lines__title animate-in-up">Email</p>
                   <p class="contact-lines__text animate-in-up">
-                    <a class="text-link-bold" href="mailto:abdulhabeeb9731@gmail.com">abdulhabeeb9731@gmail.com</a>
+                    <a class="text-link-bold" href="mailto:abdulhabeeb9731@gmail.com">abdulhabeeb9731@gmail.com</a><br>
+                    <a class="text-link-bold" href="mailto:hello@abdulhabeeb.de">hello@abdulhabeeb.de</a>
                   </p>
                 </div>
+                <!-- Removed Email (alt) section -->
               </div>
             </div>
           </div>
