--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
             </div>
             <div class="col-12 col-md-5">
               <h5 class="resume-lines__title animate-in-up">Second Prize - University Level HCI Competition</h5>
-              <p class="resume-lines__source animate-in-up">Project: MemorLoop</p>
+              <p class="resume-lines__source animate-in-up">Project: MemorLoop <a href="https://drive.google.com/file/d/1i8qvgu2LJ_bfJys-XBY7MDC5GNW46baQ/view?usp=sharing" class="text-link-bold" target="_blank">View Certificate</a></p>
             </div>
             <div class="col-12 col-md-5">
               <p class="small resume-lines__descr animate-in-up">Won second prize in university level HCI competition
@@ -1039,9 +1039,9 @@
               <path fill="currentColor" d="M5.6,12.6c-0.5-0.8-0.7-2.4-1.7-3.5c-1-1-2.7-1.2-3.5-1.7C-0.1,7-0.1,6,0.4,5.6c0.8-0.5,2.3-0.6,3.5-1.8
                   C5,2.8,5.1,1.2,5.6,0.4C6-0.1,7-0.1,7.4,0.4c0.5,0.8,0.7,2.4,1.8,3.5c1.2,1.2,2.6,1.2,3.5,1.7c0.6,0.4,0.6,1.4,0,1.7
                   C11.8,7.9,10.2,8,9.1,9.1c-1,1-1.2,2.7-1.7,3.5C7,13.1,6,13.1,5.6,12.6z" />
-            </svg>
-            <span>My Hobbies</span>
-          </p>
+          </svg>
+          <span>My Hobbies</span>
+        </p>
 
         </div>
 
