--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link btn" href="https://blog.abdulhabeeb.website/" target="_blank">
+            <a class="menu__link btn" href="https://blog.abdulhabeeb.de/" target="_blank">
               <span class="menu__caption">Blogs</span>
               <i class="ph-bold ph-book-bookmark"></i>
             </a>
@@ -649,7 +649,7 @@
             <!-- achievements single item -->
             <div class="achievements__item d-flex flex-column grid-item animate-card-3">
               <div class="achievements__card">
-                <p class="achievements__number">24</p>
+                <p class="achievements__number">25</p>
                 <p class="achievements__descr">Years Old</p>
               </div>
             </div>
@@ -802,6 +802,32 @@
           <!-- education single item -->
           <div class="row g-0 resume-lines__item animate-in-up">
             <div class="col-12 col-md-2">
+              <span class="resume-lines__date animate-in-up">2025 - Ongoing </span>
+            </div>
+            <div class="col-12 col-md-5">
+              <h5 class="resume-lines__title animate-in-up">Webdesigner</h5>
+              <p class="resume-lines__source animate-in-up">Company :
+                <a href="" class="text-link-bold" target="_blank">Moltomedia GmbH, Saarbrücken</a>
+              </p>
+            </div>
+
+          </div>
+
+          <div class="row g-0 resume-lines__item animate-in-up">
+            <div class="col-12 col-md-2">
+              <span class="resume-lines__date animate-in-up">2025 - Ongoing </span>
+            </div>
+            <div class="col-12 col-md-5">
+              <h5 class="resume-lines__title animate-in-up">Web Devloper</h5>
+              <p class="resume-lines__source animate-in-up">Company :
+                <a href="" class="text-link-bold" target="_blank">Forschungsgruppe Verkehrstelematik, Saarbrücken</a>
+              </p>
+            </div>
+
+          </div>
+
+          <div class="row g-0 resume-lines__item animate-in-up">
+            <div class="col-12 col-md-2">
               <span class="resume-lines__date animate-in-up">2023 - 2024 </span>
             </div>
             <div class="col-12 col-md-5">
@@ -905,6 +931,21 @@
               <span class="resume-lines__date animate-in-up">2025</span>
             </div>
             <div class="col-12 col-md-5">
+              <h5 class="resume-lines__title animate-in-up">First Prize - Design Competition Talinn, Estonia</h5>
+              <p class="resume-lines__source animate-in-up">Project: Child Mode <a href="" class="text-link-bold" target="_blank"></a></p>
+            </div>
+            <div class="col-12 col-md-5">
+              <p class="small resume-lines__descr animate-in-up">Won second prize in university level HCI competition
+                for the project MemorLoop.</p>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid p-0 resume-lines">
+          <div class="row g-0 resume-lines__item animate-in-up">
+            <div class="col-12 col-md-2">
+              <span class="resume-lines__date animate-in-up">2025</span>
+            </div>
+            <div class="col-12 col-md-5">
               <h5 class="resume-lines__title animate-in-up">Second Prize - University Level HCI Competition</h5>
               <p class="resume-lines__source animate-in-up">Project: MemorLoop <a href="https://drive.google.com/file/d/1i8qvgu2LJ_bfJys-XBY7MDC5GNW46baQ/view?usp=sharing" class="text-link-bold" target="_blank">View Certificate</a></p>
             </div>
@@ -914,6 +955,7 @@
             </div>
           </div>
         </div>
+
       </div>
       <!-- Awards Section End -->
 
