--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
               <span class="resume-lines__date animate-in-up">2025 - Ongoing </span>
             </div>
             <div class="col-12 col-md-5">
-              <h5 class="resume-lines__title animate-in-up">Webdesigner</h5>
+              <h5 class="resume-lines__title animate-in-up">Web Designer</h5>
               <p class="resume-lines__source animate-in-up">Company :
                 <a href="" class="text-link-bold" target="_blank">Moltomedia GmbH, Saarbrücken</a>
               </p>
